Backend: Add API to support image notes
